--- a/index.html
+++ b/index.html
@@ -10,20 +10,24 @@
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
 
   <!-- Icons -->
   <script src="https://kit.fontawesome.com/877d51e80c.js" crossorigin="anonymous"></script>
   <!-- Bootstrap -->
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -33,7 +37,7 @@
 <body>
   <!-- Hero Section -->
   <section class="hero">
-    <div style="height: 175px;" class="social position-absolute top-0 text-light pt-3">Social
+    <!-- <div style="height: 175px;" class="social position-absolute top-0 text-light pt-2">Social
       <a class="text-decoration-none text-reset" href="https://github.com/adaviladev" target="_blank">
         <i class="fa-brands fa-github m-2"></i>
       </a>
@@ -44,7 +48,7 @@
         <i class="fa-brands fa-instagram m-2"></i>
       </a>
 
-    </div>
+    </div> -->
     <div class="main-container m-4 p-2">
       <div class="name-title-container play-regular">
         <h1>Álvaro Dávila</h1><br>
@@ -60,8 +64,12 @@
             </button>
           </h2>
           <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body text-white p-2">
-              <p>Hi! My name is Álvaro, and I'm a <strong>Frontend Developer</strong> passionate about building engaging digital interfaces. I'm skilled in HTML, CSS, JavaScript, and React (check the <strong>Tech Stack</strong> section for details). I enjoy collaborating with design and backend teams to create user-friendly experiences and am always eager to learn and adapt to new technologies in web development. Feel free to check out my <strong>Projects</strong> section to see some of my work, and visit the <strong>Contact</strong> section to get in touch.</p>
+            <div class="accordion-body about-me text-white p-2">
+              <p>Hi! My name is Álvaro, and I'm a <strong>Frontend Developer</strong> passionate about building engaging
+                digital interfaces. I'm skilled in HTML, CSS, JavaScript, and React. I enjoy collaborating with design and backend teams to create
+                user-friendly experiences and I am always eager to learn and adapt to new technologies in web development.
+                Feel free to check out my <strong>Projects</strong> section to see some of my work, and visit the
+                <strong>Contact</strong> section to get in touch.</p>
             </div>
           </div>
         </div>
@@ -77,14 +85,15 @@
             <div class="accordion-body text-white d-flex justify-content-evenly  p-2">
               <div class="tech-icons">
                 <i class="fa-brands fa-html5" data-bs-toggle="tooltip" data-bs-placement="top" title="HTML5"></i>
-        <i class="fa-brands fa-css3-alt" data-bs-toggle="tooltip" data-bs-placement="top" title="CSS3"></i>
-        <i class="fa-brands fa-js" data-bs-toggle="tooltip" data-bs-placement="top" title="JavaScript"></i>
-        <i class="fa-brands fa-bootstrap" data-bs-toggle="tooltip" data-bs-placement="top" title="Bootstrap"></i>
-        <i class="fa-brands fa-react" data-bs-toggle="tooltip" data-bs-placement="top" title="React"></i>
-        <i class="fa-brands fa-sass" data-bs-toggle="tooltip" data-bs-placement="top" title="Sass"></i>
-        <i class="fa-brands fa-git" data-bs-toggle="tooltip" data-bs-placement="top" title="Git"></i>
-        <i class="fa-brands fa-figma" data-bs-toggle="tooltip" data-bs-placement="top" title="Figma"></i>
-        <i class="fa-solid fa-database" data-bs-toggle="tooltip" data-bs-placement="top" title="SQL"></i>
+                <i class="fa-brands fa-css3-alt" data-bs-toggle="tooltip" data-bs-placement="top" title="CSS3"></i>
+                <i class="fa-brands fa-js" data-bs-toggle="tooltip" data-bs-placement="top" title="JavaScript"></i>
+                <i class="fa-brands fa-bootstrap" data-bs-toggle="tooltip" data-bs-placement="top"
+                  title="Bootstrap"></i>
+                <i class="fa-brands fa-react" data-bs-toggle="tooltip" data-bs-placement="top" title="React"></i>
+                <i class="fa-brands fa-sass" data-bs-toggle="tooltip" data-bs-placement="top" title="Sass"></i>
+                <i class="fa-brands fa-git" data-bs-toggle="tooltip" data-bs-placement="top" title="Git"></i>
+                <i class="fa-brands fa-figma" data-bs-toggle="tooltip" data-bs-placement="top" title="Figma"></i>
+                <i class="fa-solid fa-database" data-bs-toggle="tooltip" data-bs-placement="top" title="SQL"></i>
               </div>
             </div>
           </div>
@@ -98,8 +107,9 @@
             </button>
           </h2>
           <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body text-white  p-2">
-              <p>This is a selection of projects I have been working on recently. Click on the image to visit the live version. You can also explore the repository at the link below each description.</p><br>
+            <div class="accordion-body projects text-white  p-2">
+              <p>This is a selection of projects I have been working on recently. Click on the image to visit the live
+                version. You can also explore the repository at the link below each description.</p><br>
               <!-- Projects wrapper -->
               <div class="row row-cols-1 row-cols-md-2 g-4">
                 <!-- Project 1 Card -->
@@ -186,7 +196,8 @@
                         random selection. It features dynamic updates of Pokémon name, ID, weight, height, sprite, and
                         various stats (HP, attack, defense, special attack, special defense, speed) fetched from the
                         PokeAPI.</p>
-                      <a href="https://github.com/adaviladev/pf-pokemon-search-app" target="_blank">GitHub repository</a>
+                      <a href="https://github.com/adaviladev/pf-pokemon-search-app" target="_blank">GitHub
+                        repository</a>
                       <a href="https://adaviladevs-pokemonsearch.netlify.app/" target="_blank">View live site</a>
                     </div>
                   </div>
@@ -199,8 +210,8 @@
         </div>
         <div class="accordion-item bg-transparent contact">
           <h2 class="accordion-header">
-            <button class="accordion-button collapsed bg-transparent text-white d-block text-center fs-4 mb-2" type="button"
-              data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false"
+            <button class="accordion-button collapsed bg-transparent text-white d-block text-center fs-4 mb-2"
+              type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false"
               aria-controls="flush-collapseFour">
               Contact
             </button>
@@ -211,7 +222,7 @@
                 <i class="m-2 fa-brands fa-square-whatsapp"></i>
                 <a href="tel:+56981838598">+569 8183 8598</a>
               </div>
-              <div class="contact-icons"><i class="m-2 fa-solid fa-envelope"></i>  
+              <div class="contact-icons"><i class="m-2 fa-solid fa-envelope"></i>
                 <a href="mailto:alvarodaviladev@gmail.com">alvarodaviladev@gmail.com</a>
               </div>
             </div>
